--- a/less/master.less
+++ b/less/master.less
@@ -124,3 +124,17 @@ h2 {
     left: 40px;
     z-index: 1;
 }
+
+#amortTable {
+  display: grid;
+  max-width: 800px;
+  margin: auto;
+  margin-top: 2%;
+  grid-template-columns: repeat(5, 1fr);
+  .boxes;
+  color: @textColor;
+  align-items: center;
+  justify-items: center;
+  row-gap: 10px;
+  margin-top: 1%;
+}
